--- a/htmlcss_study/2회차/18-form.html
+++ b/htmlcss_study/2회차/18-form.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta 
+	http-equiv="x-ua-compatible"
+	content="IE=edge"
+	> 
 	<title>설문조사 양식</title>
 </head>
 <body>
