--- a/htmlcss_study/1회차/10-profile.html
+++ b/htmlcss_study/1회차/10-profile.html
@@ -10,7 +10,7 @@
 		src="화장실.jpg"
 		alt="이건 황금 변기"
 		width="400"
-		>
+		> 
 		<div id="introduce">
 			<p>반짝반짝한 황금 변기다.</p>
 			<p>엄청 비싸보인다.</p>
@@ -22,7 +22,7 @@
 			<p>
 				1.<mark>아름다운 황금색이다.</mark><br>
 				2.<strong>물을 내릴 수 있게 설계되어있다.</strong><br>
-				3.<s>가림막이 없다.</s>
+				3.<s>뚜껑이 없다.</s>
 			</p>
 		</div>
 		<hr>
