--- a/htmlcss_study/4회차/33-chat.html
+++ b/htmlcss_study/4회차/33-chat.html
@@ -20,7 +20,7 @@
 		<main class="chat_screen">
 			<section class="chat_screen_bar">
 				<div class="user">
-					<p class="exit">나가기</p>
+					<input type="submit" value="나가기" class="exit">
 					<div class="user_column">
 						<div class="user_pic"></div>
 					</div>
